syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/siddheshRajendraNimbalkar/GO-BANK/pb";

message CreateUserRequest {
    string username = 1;
    string fullName = 2;
    string email = 3;
    string password = 4;
}

message CreatedUserResponse {  
    User user = 1;
}