syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb;

option go_package = "github.com/siddheshRajendraNimbalkar/GO-BANK/pb";

message User {
    string username = 1;
    string fullName = 2;
    string email = 3;
    google.protobuf.Timestamp  created_at = 4;
}